added contact page

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <body>
         <p style="font size: 20px">
             
-        <a href="index.html">Home</a>
+        <a href="index.html"><p style="font-size: 30px">Home</p></a>
 
         <br>
         <br>
@@ -17,10 +17,16 @@
                   <p style="font-size: 50px">Jennifer Kiener</p>
               </h1>  
                 <p>
-
+                    <ul>
+                        <li style="font-size: 25px">I am 15 years old</li>
+                        <li style="font-size: 25px">I do tutoring since 2017</li>
+                        <li style="font-size: 25px">My ambition is to teach others how math works and that math can be fun</li>
+                        <li style="font-size: 25px">I am a very creative person</li>
+                        <li style="font-size: 25px">I am from Germany</li>
+                        <li style="font-size: 25px">I have spent a whole school year in America</li>
+                    </ul>
                 </p>
             </div>
 
-            <a href="index.html">Home</a>
         </body>
 </html>
