--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Tutoring</title>
     </head>
     <body background-images="images/background.png">
-        <a href="./aboutme.html">About Me</a>
+        <a href="./aboutme.html"><p style="font-size: 30px">About me</p></a><a href="contact.html"><p style="font-size: 30px">Contact me</p></a>
         <h1>
 
             <p style="font-size: 60px">
@@ -33,6 +33,5 @@
                 </ol>
             </p>    
         </div>
-        <a href="./aboutme.html">About Me</a>
     </body>
 </html>
