--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Tutoring</title>
     </head>
     <body background-images="images/background.png">
-        <a href="./aboutme.html"><p style="font-size: 30px">About me</p></a><a href="contact.html"><p style="font-size: 30px">Contact me</p></a>
+        <p><a href="./aboutme.html"><p style="font-size: 30px">About me</p></a>
+        <a href="contact.html"><p style="font-size: 30px">Contact me</p></a>
+        </p>
         <h1>
 
             <p style="font-size: 60px">
