added new stuff
did a grid in payment, HelloWorld

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <title>Tutoring</title>
     </head>
-    <body background-images="images/background.png">
-        <p><a href="./aboutme.html"><p style="font-size: 30px">About me</p></a>
+    <body>
+        <a href="./aboutme.html"><p style="font-size: 30px">About me</p></a>
         <a href="contact.html"><p style="font-size: 30px">Contact me</p></a>
-        </p>
+        
         <h1>
 
             <p style="font-size: 60px">
@@ -33,7 +33,15 @@
                         <br>
                     <li style="font-size: 40px">Do you or your child need help in <strong>Math</strong>? Then I am the right one to <strong>help you!</strong></li>
                 </ol>
-            </p>    
+        </div>
+        <div id="schedule">
+                <h2>
+                    <p style="font-size: 30px">Schedule and Payment:</p>
+                </h2>
+                <a href="./payment.html" target="_blank">
+                    <img src="./schedule.jpg" alt="Calendar"/>
+                </a>
+                    </p>    
         </div>
     </body>
 </html>
