--- a/aboutme.html
+++ b/aboutme.html
@@ -7,15 +7,17 @@
         <p style="font size: 20px">
             
         <a href="index.html"><p style="font-size: 30px">Home</p></a>
+        <a href="contact.html"><p style="font-size: 30px">Contact me</p></a>
+
 
         <br>
         <br>
         <img src="./JennyPicture.JPG" alt="A Picture of Jennifer Kiener" title="11th grade" width="460" Length="307">
         </p>
-            <div id="Description of me">
               <h1>
                   <p style="font-size: 50px">Jennifer Kiener</p>
               </h1>  
+            <div id="description of myself">
                 <p>
                     <ul>
                         <li style="font-size: 25px">I am 15 years old</li>
