--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p style="font-size: 30px">Schedule and Payment:</p>
                 </h2>
                 <a href="./payment.html" target="_blank">
-                    <img src="./schedule.jpg" alt="Calendar"/>
+                    <img src="./schedule.jpg" width="80%" length="80%" title="click on me" alt="Calendar"/>
                 </a>
                     </p>    
         </div>
