--- a/payment.html
+++ b/payment.html
@@ -4,38 +4,38 @@
         <title>Payment and Schedule</title>
     </head>
     <h1>
-        <p style="font-size: 30px">Schedule and Payment</p>
+        <p style="font-size: 30px"><u>Schedule and Payment</u></p>
     </h1>
-        <table>
-            <thead>
-                <tr>
+        <table cellspacing="10" cellpadding="10" border="1" bgcolor="black" width="400">
+            <thead >
+                <tr bgcolor="lime">
                     <th>Day</th>
                     <th>Time</th>
                     <th>Payment(in Dollar)</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr bgcolor="yellow">
                     <th>Monday</th>
                     <td>8-10, 10:15-12:15</td>
                     <td>30</td>
                 </tr>
-                <tr>
+                <tr bgcolor="yellow">
                         <th>Tuesday</th>
                         <td>8-10, 10:15-12:15</td>
                         <td>30</td>
                     </tr>
-                    <tr>
+                    <tr bgcolor="yellow">
                             <th>Wednesday</th>
                             <td>9-11, 11:15-1:15</td>
                             <td>30</td>
                         </tr>
-                        <tr>
+                        <tr bgcolor="yellow">
                                 <th>Thursday</th>
                                 <td>8-10, 10:15-12:15</td>
                                 <td>30</td>
                             </tr>
-                            <tr>
+                            <tr bgcolor="yellow">
                                     <th>Friday</th>
                                     <td>9-11, 11:15-1:15</td>
                                     <td>30</td>
