continued in css

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link href="./style.css" type="text/css" rel="stylesheet">
         <title>About me</title>
     </head>
-    <body>
+    <body class="bodyhome">
         <p style="font size: 20px">
             
-        <a href="index.html"><p style="font-size: 30px">Home</p></a>
-        <a href="contact.html"><p style="font-size: 30px">Contact me</p></a>
+        <a class="index-link" href="index.html"><p class="border" style="font-size: 30px">Home</p></a>
+        <a class="contact-link" href="contact.html"><p class="border" style="font-size: 30px">Contact me</p></a>
 
 
         <br>
@@ -15,7 +16,7 @@
         <img src="./JennyPicture.JPG" alt="A Picture of Jennifer Kiener" title="11th grade" width="460" Length="307">
         </p>
               <h1>
-                  <p style="font-size: 50px">Jennifer Kiener</p>
+                  <p>Jennifer Kiener</p>
               </h1>  
             <div id="description of myself">
                 <p>
