--- a/payment.html
+++ b/payment.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link href="./style.css" type="text/css" rel="stylesheet">
         <title>Payment and Schedule</title>
     </head>
+    <body class="bodyhome">
     <h1>
         <p style="font-size: 30px"><u>Schedule and Payment</u></p>
     </h1>
@@ -42,4 +44,21 @@
                                 </tr>
             </tbody>
         </table>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+    </body>
 </html>
