--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,7 @@
             <link href="./style.css" type="text/css" rel="stylesheet">
         <title>About me</title>
     </head>
-    <body class="bodyhome">
-        <p style="font size: 20px">
+    <body>
             
         <a class="index-link" href="index.html"><p class="border" style="font-size: 30px">Home</p></a>
         <a class="contact-link" href="contact.html"><p class="border" style="font-size: 30px">Contact me</p></a>
@@ -15,10 +14,10 @@
         <br>
         <img src="./JennyPicture.JPG" alt="A Picture of Jennifer Kiener" title="11th grade" width="460" Length="307">
         </p>
-              <h1>
-                  <p>Jennifer Kiener</p>
+              <h1 class="myself">
+                  Jennifer Kiener
               </h1>  
-            <div id="description of myself">
+            <div id="descriptionofmyself">
                 <p>
                     <ul>
                         <li style="font-size: 25px">I am 15 years old</li>
@@ -31,6 +30,8 @@
                     
                 </p>
             </div>
-
+            <div class="footer">
+                    2019 Page for Fun 
+                   </div>
         </body>
 </html>
