--- a/payment.html
+++ b/payment.html
@@ -4,9 +4,9 @@
             <link href="./style.css" type="text/css" rel="stylesheet">
         <title>Payment and Schedule</title>
     </head>
-    <body class="bodyhome">
-    <h1>
-        <p style="font-size: 30px"><u>Schedule and Payment</u></p>
+    <body>
+    <h1 class="schedule">
+        Schedule and Payment
     </h1>
         <table cellspacing="10" cellpadding="10" border="1" bgcolor="black" width="400">
             <thead >
@@ -59,6 +59,8 @@
         <br>
         <br>
         <br>
-
+        <div class="footer">
+                2019 Page for Fun 
+               </div>
     </body>
 </html>
