--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 Mail American Fork, Utah<br>
                 USA
                 <br>
-                <a href="https://www.instagram.com/kaily.blackstorm/" target="_blank">
+                <a href="https://www.instagram.com/jennifer.kiener/" target="_blank">
                     <img src="./insta.jpg" alt="instagram icon" title="click on me" height="30%" width="30%">
                 </a>
                 <br>
