--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <br>
             <p>
                 <ol>
-                    <li class="borderli1">Tutoring is something that helpes students becoming better in a certain subject where they don't have that much strength.</li>  
+                    <li class="borderli1">Tutoring is something that helps students becoming better in a certain subject where they don't have that much strength.</li>  
                         <br>
                     <li class="borderli2">For the student it is important to not think of it as something shameful to take a private teacher but as a way to improve in a subject he wants to become better in.</li>
                         <br>
